<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/stickman_3d" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/rumus"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/rumus_pria"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/rumus_wanita"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/sp_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp" />

            <TextView
                android:id="@+id/tv_opt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/editTinggi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/tinggi" />

            <Button
                android:id="@+id/tombol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hitung" />

            <TextView
                android:id="@+id/textHasil"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/hasil"
                android:textSize="42sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>